Moved files around. added bootstrap half slider to the home page and the northern lights page, tweaked the transition of the black hole

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	
 		<div class = "title">SPACE</div>
 		 
-		<a href = "home.html"><div class = "circle"></div></a> 
+		<a href = "startbootstrap-half-slider-gh-pages/startbootstrap-half-slider-gh-pages/home.html"><div class = "circle"></div></a> 
 
 	</body>
 </html>
