--- a/Home/Home/home.html
+++ b/Home/Home/home.html
@@ -39,7 +39,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="home.html">Explore</a>
+                <a class="navbar-brand" href="../../home.html">Explore</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -51,10 +51,10 @@
                         <a href="#">Jupiter</a>
                     </li>
                     <li>
-                        <a href= "#">The Northern Lights</a>
+                        <a href= "Topic-pages/Topic-pages/NorthernLights.html">The Northern Lights</a>
                     </li>
                     <li>
-                        <a href= "#">Links</a>
+                        <a href= "Links/Links/Links.html">Links</a>
                     </li>
                 </ul>
             </div>
