--- a/Home/Home/home.html
+++ b/Home/Home/home.html
@@ -16,6 +16,8 @@
 
     <!-- Custom CSS -->
     <link href="css/half-slider.css" rel="stylesheet">
+    
+    <link href="home.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
