--- a/Home/Home/Topic-pages/Topic-pages/NorthernLights.html
+++ b/Home/Home/Topic-pages/Topic-pages/NorthernLights.html
@@ -39,24 +39,15 @@
         <div class="carousel-inner">
             <div class="item active">
                 <!-- Set the first background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('https://upload.wikimedia.org/wikipedia/commons/b/b0/PIA19912-MarsCuriosityRover-MountSharp-20151002.jpg');"></div>
-                <div class="carousel-caption">
-                    <h2>Caption 1</h2>
-                </div>
+                <div class="fill" style="background-image:url('https://upload.wikimedia.org/wikipedia/commons/b/bc/Virmalised_14.12.15.jpg');"></div>
             </div>
             <div class="item">
                 <!-- Set the second background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('https://upload.wikimedia.org/wikipedia/commons/e/e9/PIA19948-NH-Pluto-Norgay-Hillary-Mountains-2050714.jpg');"></div>
-                <div class="carousel-caption">
-                    <h2>Caption 2</h2>
-                </div>
+                <div class="fill" style="background-image:url('http://i.huffpost.com/gen/1599910/images/o-NORTHERN-LIGHTS-facebook.jpg');"></div>
             </div>
             <div class="item">
                 <!-- Set the third background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('https://images.alphacoders.com/533/thumb-1920-533936.jpg');"></div>
-                <div class="carousel-caption">
-                    <h2>Caption 3</h2>
-                </div>
+                <div class="fill" style="background-image:url('http://cdn.wallpapersafari.com/58/73/K0Igpf.jpg');"></div>
             </div>
         </div>
 
@@ -124,8 +115,7 @@
         <!-- Page Header -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Page Heading
-                    <small>Secondary Text</small>
+                <h1 class="page-header">The Aurora
                 </h1>
             </div>
         </div>
@@ -135,7 +125,7 @@
         <div class="row">
             <div class="col-md-6 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive" src="https://www.nordicvisitor.com/images/iceland/winter/northern-lights-lake-thingvellir-national-park-iceland.jpg" alt="">
+                    <img class="img-responsive" src="https://xablaxablau.files.wordpress.com/2015/06/aurora-borealis-32-cool-wallpapers-hd.jpg" alt="">
                 </a>
                 <h3>
                     <a href="#">Project One</a>
@@ -183,7 +173,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
+                    <p>Copyright © Charlotte, Renata and Denise - Code For Girls @ Birkbeck London, 2017</p>
                 </div>
             </div>
             <!-- /.row -->
