updated mars page, added a few images

--- a/mars.html
+++ b/mars.html
@@ -43,23 +43,23 @@
         <div class="carousel-inner">
             <div class="item active">
                 <!-- Set the first background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('https://upload.wikimedia.org/wikipedia/commons/b/b0/PIA19912-MarsCuriosityRover-MountSharp-20151002.jpg');"></div>
+                <div class="fill" style="background-image:url('../images/mars/mars closest approach.jpg');"></div>
                 <div class="carousel-caption">
-                    <h2>Caption 1</h2>
+                    <h2></h2>
                 </div>
             </div>
             <div class="item">
                 <!-- Set the second background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('https://upload.wikimedia.org/wikipedia/commons/e/e9/PIA19948-NH-Pluto-Norgay-Hillary-Mountains-2050714.jpg');"></div>
+                <div class="fill" style="background-image:url('../images/mars/mars surface.jpg');"></div>
                 <div class="carousel-caption">
-                    <h2>Caption 2</h2>
+                    <h2></h2>
                 </div>
             </div>
             <div class="item">
                 <!-- Set the third background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('https://images.alphacoders.com/533/thumb-1920-533936.jpg');"></div>
+                <div class="fill" style="background-image:url('../images/mars/mars and earth.jpg');"></div>
                 <div class="carousel-caption">
-                    <h2>Caption 3</h2>
+                    <h2></h2>
                 </div>
             </div>
         </div>
@@ -128,8 +128,8 @@
         <!-- Page Header -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Page Heading
-                    <small>Secondary Text</small>
+                <h1 class="page-header">Facts about Mars
+                    <small></small>
                 </h1>
             </div>
         </div>
@@ -139,21 +139,21 @@
         <div class="row">
             <div class="col-md-6 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive" src="https://www.nordicvisitor.com/images/iceland/winter/northern-lights-lake-thingvellir-national-park-iceland.jpg" alt="">
+                    <img class="img-responsive" src="../images/mars/marssun.jpg" alt="">
                 </a>
                 <h3>
-                    <a href="#">Project One</a>
+                    <a href="#">Fact 1</a>
                 </h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+                <p>A Martian year is the equivalent of 687 Earth days –while a day on the Red Planet only lasts 40 minutes more than one on Earth</p>
             </div>
             <div class="col-md-6 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive" src="https://www.visitscotland.com/cms-images/landscape-and-nature/rowardennan" alt="">
+                    <img class="img-responsive" src="../images/mars/mars land for sale.jpg" alt="">
                 </a>
                 <h3>
-                    <a href="#">Project Two</a>
+                    <a href="#">Fact 2</a>
                 </h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+                <p>mars is the only known planet inhabited by robots - 7 to be precise. NASA is planning to create an 'Earth Independent' Mars colony by the 2030s. Over 100,000 people have applied for a one-way trip to colonize mars in 2022. If you fancy joining rover Curiosity,you can apply <a href="https://www.nasa.gov/press-release/be-an-astronaut-nasa-accepting-applications-for-future-explorers">here.</a> good luck!</p>
             </div>
         </div>
         <!-- /.row -->
@@ -162,21 +162,21 @@
         <div class="row">
             <div class="col-md-6 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive" src="http://imgs.photo4me.com/4686/365402_m.jpeg" alt="">
+                    <img class="img-responsive" src="../images/mars/mars surface 2.jpg" alt="">
                 </a>
                 <h3>
-                    <a href="#">Project Three</a>
+                    <a href="#">Fact 3</a>
                 </h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+                <p>NASA was sued by three men from Yemen, claiming that NASA invaded their inheritance. “We inherited the planet from our ancestors 3,000 years ago”, they said, focusing on  mythologies of the Himyaritic and Sabaean civilizations that existed several thousand years B.C.</p>
             </div>
             <div class="col-md-6 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive" src="https://sunsetwestphoria.files.wordpress.com/2015/06/16658111180_7911b6fc3d_o.jpg" alt="">
+                    <img class="img-responsive" src="../images/mars/mars-olympus-mons.jpg" alt="">
                 </a>
                 <h3>
-                    <a href="#">Project Four</a>
+                    <a href="#">Fact 4</a>
                 </h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+                <p>Mars has many massive volcanoes and is home to Olympus Mons, the largest volcano in our solar system, it stands 21km high and is 600km across the base.</p>
             </div>
         </div>
         <!-- /.row -->
