--- a/Home/Home/Topic-pages/Topic-pages/NorthernLights.html
+++ b/Home/Home/Topic-pages/Topic-pages/NorthernLights.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Mars</title>
+    <title>The Northern Lights</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -17,10 +17,10 @@
     <!-- Custom CSS -->
     <link href="css/half-slider.css" rel="stylesheet">
 
-    <!--starwars font css-->
-    <link href="css/mars.css" rel="stylesheet">
 
-    
+    <!-- Custom font -->
+    <link href="css/Northern Lights.css" rel="stylesheet">
+
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -43,24 +43,15 @@
         <div class="carousel-inner">
             <div class="item active">
                 <!-- Set the first background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('../images/mars/mars closest approach.jpg');"></div>
-                <div class="carousel-caption">
-                    <h2></h2>
-                </div>
+                <div class="fill" style="background-image:url('https://upload.wikimedia.org/wikipedia/commons/b/bc/Virmalised_14.12.15.jpg');"></div>
             </div>
             <div class="item">
                 <!-- Set the second background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('../images/mars/mars surface.jpg');"></div>
-                <div class="carousel-caption">
-                    <h2></h2>
-                </div>
+                <div class="fill" style="background-image:url('http://i.huffpost.com/gen/1599910/images/o-NORTHERN-LIGHTS-facebook.jpg');"></div>
             </div>
             <div class="item">
                 <!-- Set the third background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('../images/mars/mars and earth.jpg');"></div>
-                <div class="carousel-caption">
-                    <h2></h2>
-                </div>
+                <div class="fill" style="background-image:url('http://cdn.wallpapersafari.com/58/73/K0Igpf.jpg');"></div>
             </div>
         </div>
 
@@ -128,8 +119,7 @@
         <!-- Page Header -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Facts about Mars
-                    <small></small>
+                <h1 class="page-header">The Aurora
                 </h1>
             </div>
         </div>
@@ -139,21 +129,21 @@
         <div class="row">
             <div class="col-md-6 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive" src="../images/mars/marssun.jpg" alt="">
+                    <img class="img-responsive" src="https://xablaxablau.files.wordpress.com/2015/06/aurora-borealis-32-cool-wallpapers-hd.jpg" alt="">
                 </a>
                 <h3>
-                    <a href="#">Fact 1</a>
+                    <a href="#">Project One</a>
                 </h3>
-                <p>A Martian year is the equivalent of 687 Earth days –while a day on the Red Planet only lasts 40 minutes more than one on Earth</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
             </div>
             <div class="col-md-6 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive" src="../images/mars/mars land for sale.jpg" alt="">
+                    <img class="img-responsive" src="https://www.visitscotland.com/cms-images/landscape-and-nature/rowardennan" alt="">
                 </a>
                 <h3>
-                    <a href="#">Fact 2</a>
+                    <a href="#">Project Two</a>
                 </h3>
-                <p>mars is the only known planet inhabited by robots - 7 to be precise. NASA is planning to create an 'Earth Independent' Mars colony by the 2030s. Over 100,000 people have applied for a one-way trip to colonize mars in 2022. If you fancy joining rover Curiosity,you can apply <a href="https://www.nasa.gov/press-release/be-an-astronaut-nasa-accepting-applications-for-future-explorers">here.</a> good luck!</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
             </div>
         </div>
         <!-- /.row -->
@@ -162,21 +152,21 @@
         <div class="row">
             <div class="col-md-6 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive" src="../images/mars/mars surface 2.jpg" alt="">
+                    <img class="img-responsive" src="http://imgs.photo4me.com/4686/365402_m.jpeg" alt="">
                 </a>
                 <h3>
-                    <a href="#">Fact 3</a>
+                    <a href="#">Project Three</a>
                 </h3>
-                <p>NASA was sued by three men from Yemen, claiming that NASA invaded their inheritance. “We inherited the planet from our ancestors 3,000 years ago”, they said, focusing on  mythologies of the Himyaritic and Sabaean civilizations that existed several thousand years B.C.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
             </div>
             <div class="col-md-6 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive" src="../images/mars/mars-olympus-mons.jpg" alt="">
+                    <img class="img-responsive" src="https://sunsetwestphoria.files.wordpress.com/2015/06/16658111180_7911b6fc3d_o.jpg" alt="">
                 </a>
                 <h3>
-                    <a href="#">Fact 4</a>
+                    <a href="#">Project Four</a>
                 </h3>
-                <p>Mars has many massive volcanoes and is home to Olympus Mons, the largest volcano in our solar system, it stands 21km high and is 600km across the base.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
             </div>
         </div>
         <!-- /.row -->
@@ -187,7 +177,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
+                    <p>Copyright © Charlotte, Renata and Denise - Code For Girls @ Birkbeck London, 2017</p>
                 </div>
             </div>
             <!-- /.row -->
