Shuffled home around, added links to home.html, remover "caption"

--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
     <!-- Custom CSS -->
     <link href="css/half-slider.css" rel="stylesheet">
     
-    <link href="home.css" rel="stylesheet">
+    <link href="css/home.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -47,16 +47,16 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="#">Mars</a>
+                        <a href="mars.html">Mars</a>
                     </li>
                     <li>
-                        <a href="#">Jupiter</a>
+                        <a href="jupiter.html">Jupiter</a>
                     </li>
                     <li>
-                        <a href= "Topic-pages/Topic-pages/NorthernLights.html">The Northern Lights</a>
+                        <a href="NorthernLights.html">The Northern Lights</a>
                     </li>
                     <li>
-                        <a href= "Links/Links/Links.html">Links</a>
+                        <a href= "Links.html">Links</a>
                     </li>
                 </ul>
             </div>
@@ -79,23 +79,14 @@
             <div class="item active">
                 <!-- Set the first background image using inline CSS below. -->
                 <div class="fill" style="background-image:url('https://upload.wikimedia.org/wikipedia/commons/b/b0/PIA19912-MarsCuriosityRover-MountSharp-20151002.jpg');"></div>
-                <div class="carousel-caption">
-                    <h2>Caption 1</h2>
-                </div>
             </div>
             <div class="item">
                 <!-- Set the second background image using inline CSS below. -->
                 <div class="fill" style="background-image:url('https://upload.wikimedia.org/wikipedia/commons/e/e9/PIA19948-NH-Pluto-Norgay-Hillary-Mountains-2050714.jpg');"></div>
-                <div class="carousel-caption">
-                    <h2>Caption 2</h2>
-                </div>
             </div>
             <div class="item">
                 <!-- Set the third background image using inline CSS below. -->
                 <div class="fill" style="background-image:url('https://images.alphacoders.com/533/thumb-1920-533936.jpg');"></div>
-                <div class="carousel-caption">
-                    <h2>Caption 3</h2>
-                </div>
             </div>
         </div>
 
