--- a/mars.html
+++ b/mars.html
@@ -43,21 +43,21 @@
         <div class="carousel-inner">
             <div class="item active">
                 <!-- Set the first background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('../images/mars/mars closest approach.jpg');"></div>
+                <div class="fill" style="background-image:url('images/mars/mars closest approach.jpg');"></div>
                 <div class="carousel-caption">
                     <h2></h2>
                 </div>
             </div>
             <div class="item">
                 <!-- Set the second background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('../images/mars/mars surface.jpg');"></div>
+                <div class="fill" style="background-image:url('images/mars/mars surface.jpg');"></div>
                 <div class="carousel-caption">
                     <h2></h2>
                 </div>
             </div>
             <div class="item">
                 <!-- Set the third background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('../images/mars/mars and earth.jpg');"></div>
+                <div class="fill" style="background-image:url('images/mars/mars and earth.jpg');"></div>
                 <div class="carousel-caption">
                     <h2></h2>
                 </div>
@@ -87,7 +87,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="../../home.html">Back to Explore!</a>
+                <a class="navbar-brand" href="home.html">Back to Explore!</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -139,7 +139,7 @@
         <div class="row">
             <div class="col-md-6 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive" src="../images/mars/marssun.jpg" alt="">
+                    <img class="img-responsive" src="images/mars/marssun.jpg" alt="">
                 </a>
                 <h3>
                     <a href="#">Fact 1</a>
@@ -148,7 +148,7 @@
             </div>
             <div class="col-md-6 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive" src="../images/mars/mars land for sale.jpg" alt="">
+                    <img class="img-responsive" src="images/mars/mars land for sale.jpg" alt="">
                 </a>
                 <h3>
                     <a href="#">Fact 2</a>
@@ -162,7 +162,7 @@
         <div class="row">
             <div class="col-md-6 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive" src="../images/mars/mars surface 2.jpg" alt="">
+                    <img class="img-responsive" src="images/mars/mars surface 2.jpg" alt="">
                 </a>
                 <h3>
                     <a href="#">Fact 3</a>
@@ -171,7 +171,7 @@
             </div>
             <div class="col-md-6 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive" src="../images/mars/mars-olympus-mons.jpg" alt="">
+                    <img class="img-responsive" src="images/mars/mars-olympus-mons.jpg" alt="">
                 </a>
                 <h3>
                     <a href="#">Fact 4</a>
