--- a/NorthernLights.html
+++ b/NorthernLights.html
@@ -17,7 +17,6 @@
     <!-- Custom CSS -->
     <link href="css/half-slider.css" rel="stylesheet">
 
-
     <!-- Custom font -->
     <link href="css/Northern Lights.css" rel="stylesheet">
 
@@ -78,19 +77,22 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="../../home.html">Back to Explore!</a>
+                <a class="navbar-brand" href="home.html">Back to Explore!</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li>
-                        <a href="#">Mars</a>
+                <li>
+                        <a href="mars.html">Mars</a>
                     </li>
                     <li>
-                        <a href="#">Jupiter</a>
+                        <a href="jupiter.html">Jupiter</a>
                     </li>
                     <li>
-                        <a href="#">Contact</a>
+                        <a href="NorthernLights.html">The Northern Lights</a>
+                    </li>
+                    <li>
+                        <a href= "Links.html">Links</a>
                     </li>
                 </ul>
             </div>
