--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	
 		<div class = "title">SPACE</div>
 		 
-		<a href = "Home/Home/home.html"><div class = "circle"></div></a> 
+		<a href = "home.html"><div class = "circle"></div></a> 
 
 	</body>
 </html>
