--- a/home.html
+++ b/home.html
@@ -17,8 +17,9 @@
     <!-- Custom CSS -->
     <link href="css/half-slider.css" rel="stylesheet">
     
-    <link href="home.css" rel="stylesheet">
+    <link href="css/home.css" rel="stylesheet">
 
+    <link href="css/font.css" rel="stylesheet">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -41,22 +42,22 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="../../home.html">Explore</a>
+                <a class="navbar-brand" href="home.html">Explore</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="#">Mars</a>
+                        <a href="mars.html">Mars</a>
                     </li>
                     <li>
-                        <a href="#">Jupiter</a>
+                        <a href="jupiter.html">Jupiter</a>
                     </li>
                     <li>
-                        <a href= "Topic-pages/Topic-pages/NorthernLights.html">The Northern Lights</a>
+                        <a href="NorthernLights.html">The Northern Lights</a>
                     </li>
                     <li>
-                        <a href= "Links/Links/Links.html">Links</a>
+                        <a href="links/Links.html">Links</a>
                     </li>
                 </ul>
             </div>
