Finalised Northern Lights content and updated links page

--- a/Links.html
+++ b/Links.html
@@ -45,10 +45,10 @@
                                 <a href="https://twitter.com/nasa?lang=en" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
                             </li>
                             <li>
-                                <a href="http://www.aurora-service.eu/" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Northern Lights</span></a>
+                                <a href="https://www.youtube.com/watch?v=qzMQza8xZCc" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">LIVE: Earth</span></a>
                             </li>
                             <li>
-                                <a href="#" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
+                                <a href="https://www.instagram.com/iss/?hl=de" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">ISS instagram</span></a>
                             </li>
                         </ul>
                     </div>
