--- a/home.html
+++ b/home.html
@@ -58,6 +58,9 @@
                     <li>
                         <a href= "Links.html">Links</a>
                     </li>
+                    <li>
+                        <a href="vote.html">Vote</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
