--- a/home.html
+++ b/home.html
@@ -109,7 +109,31 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1>SPACE - The Final Frontier</h1>
-                <p>Here goes some general text about how awesome space is!</p>
+                <p>The Milky Way Galaxy is our home galaxy in the universe. It is a fairly typical barred spiral with four major arms in its disk, at least one spur, and a newly discovered outer arm. The galactic centre, which is located about 26,000 light-years from Earth, contains at least one supermassive black hole (called Sagittarius A*), and is crossed by a bar. The Milky Way began forming around 12 billion years ago and is part of a group of about 50 galaxies called the Local Group. The Andromeda Galaxy is part of this group as are numerous smaller galaxies, including the Magellanic Clouds. The Local Group itself is part of a larger gathering of galaxies called the Virgo Supercluster of galaxies.</p>
+
+                <p>Milky Way Galaxy Profile
+
+                <ul>
+                <li>Diameter:   100,000 - 180,000 ly</li>
+                <li>Distance to Galactic Centre:    27,000 ly</li>
+                <li>Mass:   800 - 1,500 M☉</li>
+                <li>Age:    13.6 Billion years</li>
+                <li>Number of Stars 100 - 400 billion</li>
+                <li>Constellation:  Sagittarius</li>
+                </ul>
+                </p>
+
+                <p>Facts About The Milky Way
+
+                <ul>
+                <li>The Milky Way began as a series of dense regions in the early universe not long after the Big Bang. The first stars to form were in globular clusters that still exist. They are among the oldest stars formed in the Milky Way region.</li>
+                <li>The Milky Way has grown by merging with other galaxies through time. It is currently acquiring stars from a very small galaxy called the Sagittarius Dwarf Spheroidal, as well as gobbling up material from the Magellanic Clouds.</li>
+                <li>The Milky Way moves through space at a velocity of about 552 kilometres per second (343 miles per second) with respect to the Cosmic Microwave Background radiation.</li>
+                <li>The Milky Way’s central core contains a supermassive black hole. It is commonly referred to as Sagittarius A*. It contains the mass of about 4.3 million Suns.</li>
+                <li>The stars, gas and dust of the Milky Way all orbit the centre at a rate of about 220 kilometres per second. This constant rate for all stars at different distances from the core implies the existence of a shell of dark matter surrounding our galaxy.</li>
+                <li>Our galaxy will collide with Andromeda Galaxy in about 5 billion years. Some astronomers refer to our two galaxy as a binary system of giant spirals.</li>
+                </ul>
+                </p>
             </div>
         </div>
 
