Fixed the starwars font on mars.html

--- a/mars.html
+++ b/mars.html
@@ -18,7 +18,7 @@
     <link href="css/half-slider.css" rel="stylesheet">
 
     <!--starwars font css-->
-    <link href="css/mars.css" rel="stylesheet">
+    <link href="css/font.css" rel="stylesheet">
 
     
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
