Fixed the font on mars.html and the links page. Also added navbar to links page

--- a/mars.html
+++ b/mars.html
@@ -93,13 +93,16 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="#">Mars</a>
+                        <a href="jupiter.html">Jupiter</a>
                     </li>
                     <li>
-                        <a href="#">Jupiter</a>
+                        <a href="NorthernLights.html">The Northern Lights</a>
                     </li>
                     <li>
-                        <a href="#">Contact</a>
+                        <a href="Links.html">Links</a>
+                    </li>
+                    <li>
+                        <a href="vote.html">Vote</a>
                     </li>
                 </ul>
             </div>
