Added Pluto pun

--- a/home.html
+++ b/home.html
@@ -143,6 +143,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
+                    <h1>MAKE PLUTO GREAT AGAIN !</h1>
                     <p>Copyright &copy; Charlotte, Renata and Denise - Code For Girls @ Birkbeck London, 2017</p>
                 </div>
             </div>
