updated broken divs

--- a/jupiter.html
+++ b/jupiter.html
@@ -44,7 +44,7 @@
         <div class="carousel-inner">
             <div class="item active">
                 <!-- Set the first background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('images/Jupiter/Jupiter.jpg');""></div>
+                <div class="fill" style="background-image:url('images/Jupiter/Jupiter.jpg');"></div>
                 <div class="carousel-caption">
                 </div>
             </div>
@@ -176,7 +176,7 @@
                 </div>            
                 <div class="col-md-6 portfolio-item flip-3D">
                     <div class="front">
-                        <img class="img-responsive" src='images/Jupiter/JupitersMoons.jpg')">
+                        <img class="img-responsive" src='images/Jupiter/JupitersMoons.jpg')>
                     </div>
                     <div class="back">
                         <h3>
