--- a/mars.html
+++ b/mars.html
@@ -25,6 +25,12 @@
 
                 <!-- Flip-3D CSS -->
     <link href="css/container.css" rel ="stylesheet">
+    
+    <style>
+        .front {
+            background-size: cover;
+        }
+    </style>
 
     
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -204,7 +210,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
+                    <p>Copyright &copy; Charlotte, Renata and Denise - Code For Girls @ Birkbeck London, 2017</p>
                 </div>
             </div>
             <!-- /.row -->
