--- a/mars.html
+++ b/mars.html
@@ -107,13 +107,19 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="#">Mars</a>
+                        <a href="#" style="color:white">Mars</a>
                     </li>
                     <li>
-                        <a href="#">Jupiter</a>
+                        <a href="jupiter.html">Jupiter</a>
                     </li>
                     <li>
-                        <a href="#">Contact</a>
+                        <a href="NorthernLights.html">The Northern Lights</a>
+                    </li>
+                    <li>
+                        <a href="Links.html">Links</a>
+                    </li>
+                    <li>
+                        <a href="vote.html">Vote</a>
                     </li>
                 </ul>
             </div>
