Fixed link to Northern Links in jupiter.html

--- a/jupiter.html
+++ b/jupiter.html
@@ -94,7 +94,7 @@
                         <a href="mars.html">Mars</a>
                     </li>
                     <li>
-                        <a href="northernlights.html">The Northern Lights</a>
+                        <a href="NorthernLights.html">The Northern Lights</a>
                     </li>
                     <li>
                         <a href="links.html">Links</a>
