Update navar in northernlights and links html

--- a/Links.html
+++ b/Links.html
@@ -58,6 +58,9 @@
                         <a href="NorthernLights.html">The Northern Lights</a>
                     </li>
                     <li>
+                        <a href="#" style="color:white">Links</a>
+                    </li>
+                    <li>
                         <a href="vote.html">Vote</a>
                     </li>
                 </ul>
