--- a/NorthernLights.html
+++ b/NorthernLights.html
@@ -88,6 +88,9 @@
                         <a href="jupiter.html">Jupiter</a>
                     </li>
                     <li>
+                        <a href="#" style="color:white">The Northern Lights</a>
+                    </li>
+                    <li>
                         <a href="Links.html">Links</a>
                     </li>
                     <li>
