ren's test for pushing and merging
hopefully this works now!

--- a/jupiter.html
+++ b/jupiter.html
@@ -85,7 +85,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="Home/Home/home.html">Back to Explore!</a>
+                <a class="navbar-brand" href="home.html">Back to Explore!</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -94,10 +94,13 @@
                         <a href="mars.html">Mars</a>
                     </li>
                     <li>
-                        <a href="northernlights.html">The Northern Lights</a>
+                        <a href="#" style="color:white">Jupiter</a>
                     </li>
                     <li>
-                        <a href="links.html">Links</a>
+                        <a href="NorthernLights.html">The Northern Lights</a>
+                    </li>
+                    <li>
+                        <a href="Links.html">Links</a>
                     </li>
                     <li>
                         <a href="vote.html">Vote</a>
@@ -163,20 +166,10 @@
 
         <!-- Projects Row -->
         <div id="bottom-row">
-            <div class="row">
+            <div class="row">           
                 <div class="col-md-6 portfolio-item flip-3D">
                     <div class="front">
-                        <iframe class="img-responsive" height="350px"; width="600px"; src="https://www.youtube.com/embed/RcQ4Ccf7Q00" frameborder="0" allowfullscreen></iframe>>
-                    </div>
-                    <div class="back">
-                        <h3>
-                            <a href="https://www.nasa.gov/feature/jpl/jupiter-s-7th-pearl">Click here for more awesome Jupiter facts!!!</a>
-                        </h3>
-                    </div> 
-                </div>            
-                <div class="col-md-6 portfolio-item flip-3D">
-                    <div class="front">
-                        <img class="img-responsive" src='images/Jupiter/JupitersMoons.jpg')>
+                        <img class="img-responsive" src='images/Jupiter/JupitersMoons.jpg')">
                     </div>
                     <div class="back">
                         <h3>
@@ -185,6 +178,18 @@
                             <p>Jupiter has 53 named moons but scientist now believe it to have 57 moons. Jupiter has four main moons; Io, Europa, Ganymede, and Callisto. All these moon's have a layered structure similar to Earth. <a href="http://solarsystem.nasa.gov/planets/jupiter/moons">Follow this link to find out more....</a></p>
                     </div>
                 </div>
+                <div class="col-md-6 portfolio-item flip-3D">
+                    <div class="front">
+                        <img class="img-responsive" src="images/Jupiter/fieryview.jpg">
+                    </div>
+                    <div class="back">
+                        <h3>
+                            <a href="https://www.youtube.com/watch?v=RcQ4Ccf7Q00">Watch a cool video about Jupiter!</a>
+                            <p>OR</p>
+                            <a href="https://www.nasa.gov/feature/jpl/jupiter-s-7th-pearl">Click here for more awesome Jupiter facts!!!</a> 
+                        </h3>
+                    </div> 
+                </div> 
             </div>      
         </div>
         <!-- /.row -->
