--- a/Links.html
+++ b/Links.html
@@ -17,6 +17,8 @@
     <!-- Custom CSS -->
     <link href="css/landing-page.css" rel="stylesheet">
 
+    <!--Font CSS -->
+     <link href="css/font.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -28,6 +30,44 @@
 </head>
 
 <body>
+
+<!-- Navigation -->
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="home.html">Back to Explore!</a>
+            </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <li>
+                        <a href="mars.html">Mars</a>
+                    </li>
+                    <li>
+                        <a href="jupiter.html">Jupiter</a>
+                    </li>
+                    <li>
+                        <a href="NorthernLights.html">The Northern Lights</a>
+                    </li>
+                    <li>
+                        <a href ="Links.html" style="color:white">Links</a>
+                    </li>   
+                     <li>
+                        <a href="vote.html">Vote</a>
+                    </li>               
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
 
     <!-- Header -->
     <a name="about"></a>
