updated font for home screen

--- a/NorthernLights.html
+++ b/NorthernLights.html
@@ -81,11 +81,14 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                <li>
+                  <li>
                         <a href="mars.html">Mars</a>
                     </li>
                     <li>
                         <a href="jupiter.html">Jupiter</a>
+                    </li>
+                    <li>
+                        <a href="#" style="color:white">The Northern Lights</a>
                     </li>
                     <li>
                         <a href="Links.html">Links</a>
