--- a/home.html
+++ b/home.html
@@ -11,13 +11,20 @@
 
     <title>SPACE</title>
 
-    <!-- Bootstrap Core CSS -->
+     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
     <link href="css/half-slider.css" rel="stylesheet">
-    
-    <link href="css/home.css" rel="stylesheet">
+
+    <!--starwars font css-->
+    <link href="css/font.css" rel="stylesheet">
+
+            <!-- Flip-3D CSS -->
+    <link href="css/flip-3D.css" rel ="stylesheet">
+
+                <!-- Flip-3D CSS -->
+    <link href="css/home.css" rel ="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
