updated font for header

--- a/jupiter.html
+++ b/jupiter.html
@@ -132,7 +132,7 @@
         <!-- Page Header -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Jupiter</h1>
+                <h1 class="page-header" style="color:white">Jupiter</h1>
             </div>
         </div>
         <!-- /.row -->
