--- a/NorthernLights.html
+++ b/NorthernLights.html
@@ -123,7 +123,7 @@
         <!-- Page Header -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Auroras</h1>
+                <h1 class="page-header" style="color:white">Auroras</h1>
             </div>
         </div>
         <!-- /.row -->
